--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,5 +46,5 @@
     "typescript-eslint": "^8.39.1",
     "vite": "^7.1.2"
   },
-  "homepage": "https://floriankleewein.github.io/arcane-anvil"
+  "homepage": "https://floriankleewein.github.io/arcane-anvil/"
 }
