--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "vite build",
-    "deploy": "gh-pages -d dist -c arcane-anvil.com"
+    "deploy": "gh-pages -d dist --cname arcane-anvil.com"
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.7",
